--- a/flatastic/css/colors/red.css
+++ b/flatastic/css/colors/red.css
@@ -1,18 +1,18 @@
 /* STYLE COLOR YELLOW */
 mark{
-	background: #e74c3c;
+	background: #f8007b;
 }
 ::selection{
-	background: #e74c3c;
+	background: #f8007b;
 }
 ::-moz-selection{
-	background: #e74c3c;
+	background: #f8007b;
 }
 ::-o-selection {
-	background: #e74c3c;
+	background: #f8007b;
 }
 ::-ms-selection {
-	background: #e74c3c;
+	background: #f8007b;
 }
 
 
@@ -31,10 +31,10 @@ label[class*="required"]:after,.vertical_list_type_7 li:before,.first_letter_1 >
 }
 .shopping_cart,[role="banner"],.sub_menu_wrap,.banner_type_2.red,
 .vertical_list_type_3 li:before,.vertical_list_type_7 li:before{
-	border-color:#e74c3c;
+	border-color:#f8007b;
 }
 .shopping_cart:before,.sub_menu_wrap:before{
-	border-bottom-color:#e74c3c;
+	border-bottom-color:#f8007b;
 }
 .count,.bg_scheme_color,.button_type_3:hover .count.type_2,
 .button_type_3.active .count.type_2,.md_no-touch .main_menu > li:hover > a,.main_menu > li.current > a,
@@ -53,7 +53,7 @@ label[class*="required"]:after,.vertical_list_type_7 li:before,.first_letter_1 >
 
 }
 .select_color.red{
-	background-color:#e74c3c;
+	background-color:#f8007b;
 }
 ::-webkit-scrollbar-thumb{
 	background:#f8007b;
@@ -61,215 +61,215 @@ label[class*="required"]:after,.vertical_list_type_7 li:before,.first_letter_1 >
 
 /* customs */
 .h-construction {
-  color: #e74c3c;
+  color: #f8007b;
 }
 span.line-item-total-raw, td.views-field-commerce-order-total, td.component-total, td.views-field-commerce-total {
-  color: #e74c3c;
+  color: #f8007b;
 }
 a.b-construction {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
 .page-index-construction a:hover, .page-index-construction .view-about a.color_dark:hover, .page-index-construction blockquote::before {
-  color: #e74c3c;
+  color: #f8007b;
 }
 .page-index-construction .vertical_list_type_2 > li::before {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
 .page-index-construction button.bg_cs_hover:hover {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
 .view-commerce-cart-block ul > li.line-item-summary-checkout > a {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
 #search-header-3 .form-submit {
-  background: #e74c3c none repeat scroll 0 0;
+  background: #f8007b none repeat scroll 0 0;
   box-shadow: 0 2px 0 #c0392b;
 }
 .widget_content ul.categories_list li.active > a.s-parent::after{
-  color: #e74c3c;
+  color: #f8007b;
 }
 .widget_content ul.categories_list > li.active > a.s-parent {
-  color: #e74c3c;
+  color: #f8007b;
 }
 .bg_scheme_color[class*="button_type_"], .bg_dark_color[class*="button_type_"]:hover {
   box-shadow: 0 2px 0 #f8007b;
 }
 .widget_content ul.categories_list > li > a.s-parent:hover {
-  color: #e74c3c;
+  color: #f8007b;
 }
 
 ol.search-results a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 
 .m_bottom_5 a.username:hover,.view-blog h4.m_bottom_5 a:hover{
-    color: #e74c3c
+    color: #f8007b
 
 }
 .f_size_medium a:hover,.c-edit a:hover,.b-category a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .about_project .field-name-field-portfolio-categories .field-item a:hover,.about_project .field-name-field-tag .field-item a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .view-blog-category ul.categories_list a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .view-blog-latest- a:hover,.comment-form a:hover,.views-responsive-grid .t_xs_align_l a:hover,.view-display-id-block_recent a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .view-portfolio-tags .tags_list a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .field-name-field-product-manufacturer a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .node-type-product-display .p-tags a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 span.c-color:hover{
-    color:#e74c3c;
+    color:#f8007b;
 }
 .widget_content ul.categories_list > li.active > a.s-parent{
-    color:#e74c3c;
+    color:#f8007b;
 }
 .widget_content ul.categories_list  li.active > a.s-parent::after{
-    color:#e74c3c;
+    color:#f8007b;
 }
 .widget_content ul.categories_list  > li > a.s-parent:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 #views-form-commerce-cart-form-default span.line-item-total-label{
-    color: #e74c3c;
+    color: #f8007b;
 }
 td.views-field-line-item-title a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 span.line-item-total-raw,td.views-field-commerce-order-total,td.component-total,td.views-field-commerce-total{
-    color: #e74c3c;
+    color: #f8007b;
 }
 td input.delete-line-item{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .page-checkout input.checkout-cancel,.page-checkout input.checkout-cancel:focus,.page-checkout-review input.checkout-back,.page-checkout-review input.checkout-back:focus{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .bg-statistic{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .page-one-page a.c-button{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .h_top a:hover,.h_top a.default_t_color:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .c-recent .t_xs_align_l > a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 nav.navigation-onepage > ul > li > a:hover{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 nav.navigation-onepage > ul > li > a.current{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 /*service-onepage*/
 .s-icon-wrap i{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .page-one-page #footer a.tr_hover_op:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .view-team h4.t-title a:hover,.view-display-id-page_5 a.color_dark:hover,.page-one-page .view-id-about a.color_dark:hover,.page-one-page blockquote:before{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .page-one-page button.bg_cs_hover:hover{
-    background-color:#e74c3c;
+    background-color:#f8007b;
 }
 .contact-wrapper .align-center a{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .h-construction{
-    color: #e74c3c;
+    color: #f8007b;
 }
 a.b-construction{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .page-index-construction a:hover,.page-index-construction .view-about a.color_dark:hover,.page-index-construction blockquote:before{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .page-index-construction button.bg_cs_hover:hover{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 .page-index-construction .vertical_list_type_2 > li:before{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 p.f-price{
-    color: #e74c3c;
+    color: #f8007b;
 }
 #login_popup .item-list a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 #search-header-3 .form-submit{
-    background: none repeat scroll 0 0 #e74c3c;
+    background: none repeat scroll 0 0 #f8007b;
 }
 .view-commerce-cart-block ul > li.line-item-summary-checkout > a{
-    background-color: #e74c3c;
+    background-color: #f8007b;
 }
 /*order list vs order details*/
 td.component-total{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .fontawesome-icon-list a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 #block-system-main table.sticky-enabled thead > tr > th a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .portfolio-onepage .c-category a:hover{
-    color: #e74c3c;
+    color: #f8007b;
 }
 .page-checkout td.component-title{
-    color: #e74c3c;
+    color: #f8007b;
 }
-.views-reset-button:hover {color: #e74c3c;}
+.views-reset-button:hover {color: #f8007b;}
 .slider-revolution .tparrows:hover {
   background: #f8007b none repeat scroll 0 0;
 }
 #commerce-checkout-form-checkout .form-submit.ajax-processed {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
 .simplenews-subscribe .form-submit, #simplenews-subscriptions-multi-block-form .form-submit {
-  background: #e74c3c none repeat scroll 0 0;
-  box-shadow: 0 2px 0 #e74c3c;
+  background: #f8007b none repeat scroll 0 0;
+  box-shadow: 0 2px 0 #f8007b;
 }
 .sub_menu li a.active-trail {
-  color: #e74c3c;
+  color: #f8007b;
 }
-.pager-load-more a[role="button"]{background: #e74c3c;color: #252525; padding: 10px 20px;}
+.pager-load-more a[role="button"]{background: #f8007b;color: #252525; padding: 10px 20px;}
 
 /*color*/
-body.page-interior-variant-1 .count.type_2,.page-interior-landing .count.type_2{background: #e74c3c}
-h1.about-title{color: #e74c3c;font-weight: 700;font-style: italic}
-.main_menu.header_5[class*="type_"] > li:hover > a{color: #e74c3c!important;}
-span.button-about,.portfolio-view-all a{padding: 14px 22px;color: #232323;background-color: #e74c3c;font-size: 16px;font-weight: 400}
+body.page-interior-variant-1 .count.type_2,.page-interior-landing .count.type_2{background: #f8007b}
+h1.about-title{color: #f8007b;font-weight: 700;font-style: italic}
+.main_menu.header_5[class*="type_"] > li:hover > a{color: #f8007b!important;}
+span.button-about,.portfolio-view-all a{padding: 14px 22px;color: #232323;background-color: #f8007b;font-size: 16px;font-weight: 400}
 span.button-about:hover,.portfolio-view-all a:hover{background-color: #232323;color: #fff}
 .bg-portfolio-interior figcaption a,.bg-portfolio-interior .field-item a,.bg-services-interior .color_dark,.bg-services-interior p{color:#fff}
-.bg-portfolio-interior figcaption a:hover,.bg-portfolio-interior .field-item a:hover{color: #e74c3c}
-.bg-portfolio-interior ul#filter_portfolio > li.active{color:  #252525 ; background-color: #e74c3c}
-a.color_light:hover{color: #e74c3c}
+.bg-portfolio-interior figcaption a:hover,.bg-portfolio-interior .field-item a:hover{color: #f8007b}
+.bg-portfolio-interior ul#filter_portfolio > li.active{color:  #252525 ; background-color: #f8007b}
+a.color_light:hover{color: #f8007b}
 ul.header_5 li a{color: #252525}
-ul.header_5 > li > a.active-trail{background: none;color: #e74c3c!important;margin-right: 5px}
-ul.header_5 > li.current > a{border-bottom: 2px solid #e74c3c;}
-ul.header_5 > li > a:hover{border-bottom: 2px solid #e74c3c;}
-.small-text-size{color: #e74c3c;}
+ul.header_5 > li > a.active-trail{background: none;color: #f8007b!important;margin-right: 5px}
+ul.header_5 > li.current > a{border-bottom: 2px solid #f8007b;}
+ul.header_5 > li > a:hover{border-bottom: 2px solid #f8007b;}
+.small-text-size{color: #f8007b;}
 #commerce-checkout-form-checkout .commerce_coupon input.form-submit.ajax-processed {
-  background-color: #e74c3c;
+  background-color: #f8007b;
 }
-.sub_menu li a.active-trail{ color: #e74c3c;}
-#maintenance .title span {color: #e74c3c;}
+.sub_menu li a.active-trail{ color: #f8007b;}
+#maintenance .title span {color: #f8007b;}
 /*MEGA MENU*/
 .tb-megamenu .nav > li > a:focus, .tb-megamenu .nav > li > a:hover{
-    background: #e74c3c;
+    background: #f8007b;
     color: #fff;
 }
 
@@ -279,51 +279,51 @@ ul.header_5 > li > a:hover{border-bottom: 2px solid #e74c3c;}
     font-weight: 300 !important;
     color: #292f38;
 }
-.tb-megamenu .dropdown-menu .active > a, .tb-megamenu .dropdown-menu .active > a:hover{background: transparent;color: #e74c3c !important;}
+.tb-megamenu .dropdown-menu .active > a, .tb-megamenu .dropdown-menu .active > a:hover{background: transparent;color: #f8007b !important;}
 .tb-megamenu .dropdown-menu li.menu-title a{
     font-weight: bold !important;
     text-transform: uppercase;
 }
 .tb-megamenu .dropdown-menu li > a:hover, .tb-megamenu .dropdown-menu li > a:focus, .tb-megamenu .dropdown-submenu:hover > a{
-    color: #e74c3c;
+    color: #f8007b;
 }
-.tb-megamenu .nav li.dropdown.active > .dropdown-toggle, .tb-megamenu .nav li.dropdown.open.active > .dropdown-toggle, .tb-megamenu .nav > li.dropdown.open.active > a:hover{background-color: #e74c3c;}
+.tb-megamenu .nav li.dropdown.active > .dropdown-toggle, .tb-megamenu .nav li.dropdown.open.active > .dropdown-toggle, .tb-megamenu .nav > li.dropdown.open.active > a:hover{background-color: #f8007b;}
 .tb-megamenu-nav.header_5 > li > a{background: none !important;color: #252525;border-radius: 0;}
-.tb-megamenu-nav.header_5 > li > a:hover,.tb-megamenu-nav.header_5 > li:hover > a{color: #e74c3c !important;}
-.tb-megamenu-nav.header_5 > li.active-trail > a{color: #e74c3c !important;border-radius: 2px solid #e74c3c;}
+.tb-megamenu-nav.header_5 > li > a:hover,.tb-megamenu-nav.header_5 > li:hover > a{color: #f8007b !important;}
+.tb-megamenu-nav.header_5 > li.active-trail > a{color: #f8007b !important;border-radius: 2px solid #f8007b;}
 
 @media (min-width: 992px) {
     .tb-megamenu .nav li.dropdown.open > .dropdown-toggle{
-        background: #e74c3c;
+        background: #f8007b;
         color: #fff;
     }
     .tb-megamenu-item.level-1 > .mega-dropdown-menu > .mega-dropdown-inner > .row-fluid:before{
-        color: #e74c3c;
+        color: #f8007b;
     }
     .tb-megamenu-submenu.dropdown-menu{
-        border-color: #e74c3c;
+        border-color: #f8007b;
     }
 }
 
 @media (max-width: 992px){
-    .tb-megamenu .nav li.dropdown.open > .dropdown-toggle{color: #e74c3c;}
+    .tb-megamenu .nav li.dropdown.open > .dropdown-toggle{color: #f8007b;}
 
-    .tb-megamenu-item.active-trail > a{color: #e74c3c}
+    .tb-megamenu-item.active-trail > a{color: #f8007b}
 
     .tb-megamenu .nav li.dropdown.active > .dropdown-toggle, .tb-megamenu .nav li.dropdown.open.active > .dropdown-toggle, .tb-megamenu .nav > li.dropdown.open.active > a:hover{
         background-color: transparent !important;
-        color: #e74c3c;
+        color: #f8007b;
     }
 
-    #nav .dropdown-menu li.hover > a, #nav .dropdown-menu li:hover > a, #nav .dropdown-menu li.active > a{background: #fff;color: #e74c3c !important;}
+    #nav .dropdown-menu li.hover > a, #nav .dropdown-menu li:hover > a, #nav .dropdown-menu li.active > a{background: #fff;color: #f8007b !important;}
 }
 @media only screen and (max-width: 767px){
     .page-one-page #menu_button.active{
-        background-color: #e74c3c;
+        background-color: #f8007b;
     }
 
 	.main_menu > li > a{
-		color:#e74c3c;
-		border:1px solid #e74c3c;
+		color:#f8007b;
+		border:1px solid #f8007b;
 	}
 }
