--- a/flatastic/css/custom.css
+++ b/flatastic/css/custom.css
@@ -342,7 +342,7 @@ ul.mega_menu > .f_left > a{
     content: '\00a0,\00a0';
 }
 .node-type-blog .view-related-blog .views-row-last a.color_dark::after,.node-type-product-display .p-tags div.field-item:last-child a::after{
-    display: none;
+    display: block;
 }
 .node-type-product-display .p-tags{
     display: inline-block;
@@ -2983,8 +2983,8 @@ h2.pane-title, .featured_wrap span h2 {
 }
 
 .front .category_grid .product_item:first-child img:hover{
-  height: 620px;
-  width: 640px;
+  /*height: 620px;
+  width: 640px;*/
   opacity: 1;
 }
 
@@ -2992,15 +2992,15 @@ h2.pane-title, .featured_wrap span h2 {
   height: 285px;
   width: 503px;
   opacity: 0.5;
-  -webkit-transition: all 2s ease;
-  -moz-transition: all 2s ease;
-  -ms-transition: all 2s ease;
-  transition: all 2s ease;
+  -webkit-transition: all 1s ease;
+  -moz-transition: all 1s ease;
+  -ms-transition: all 1s ease;
+  transition: all 1s ease;
 }
 
 .front .category_grid .product_item img:hover {
-  height: 305px;
-  width: 523px;
+  /*height: 305px;
+  width: 523px;*/
   opacity: 1;
 }
 
@@ -3077,10 +3077,10 @@ h2.pane-title, .featured_wrap span h2 {
 .glass_wrap .glass_inner_wrap .cat_list {
   margin-top: 0px;
   opacity: 0;
-  -webkit-transition: all 1s ease;
-  -moz-transition: all 1s ease;
-  -ms-transition: all 1s ease;
-  transition: all 1s ease;
+  -webkit-transition: all 0.5s ease;
+  -moz-transition: all 0.5s ease;
+  -ms-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 .glass_wrap .glass_inner_wrap a.exploreBtn:hover .cat_list {
@@ -3091,8 +3091,8 @@ h2.pane-title, .featured_wrap span h2 {
 
 .glass_wrap .glass_inner_wrap .cat_list li {
   display: inline;
-      padding: 0px 12px;
-      text-transform: uppercase;
+  padding: 0px 12px;
+  text-transform: uppercase;
 }
 
 .glass_wrap .glass_inner_wrap .cat_list li a{
@@ -3133,12 +3133,10 @@ h2.pane-title, .featured_wrap span h2 {
   -moz-transition: all 1s ease;
   -ms-transition: all 1s ease;
   transition: all 1s ease;
-  opacity: 0.5;
+  opacity: 0.7;
 }
 
 .front .product_item, .owl-item > .photoframe a > img:hover {
-  width: 395px;
-  height: 598px;
   opacity: 1;
 }
 
@@ -3164,4 +3162,138 @@ h2.pane-title, .featured_wrap span h2 {
 #footer .copy_right {
   text-align: center;
   text-transform: uppercase;
+}
+
+.footer_top_part {
+  border: 1px solid #000;
+  padding-top: 50px;
+}
+
+.footer_wrap {
+  padding: 260px 0px 150px 0px;
+  text-align: center;
+}
+
+.footer_wrap h1 {
+  text-transform: uppercase;
+  color: #000;
+  margin-bottom: 15px;
+}
+
+.footer_wrap input.collect_mail {
+  color: #000;
+    background: #fff;
+    border: 1px solid #000;
+    width: 500px;
+    line-height: 69px;
+    height: 62px;
+    text-transform: uppercase;
+    font-size: 20px;
+}
+
+.footer_wrap input.sub_btn {
+  background: url(../images/sub_btn.jpg) no-repeat;
+  height: 65px;
+  width: 59px;
+}
+
+
+.black_bg {
+  background: #000;
+  padding: 75px 0px;
+}
+
+.black_bg .container {
+  position: relative;
+}
+
+.black_bg h3 {
+  font-size: 15px;
+  text-transform: uppercase;
+  margin-bottom: 7px;
+}
+
+.black_bg h1 {
+  color: #ffffff;
+  display: inline-block;
+  font-size: 60px;
+  margin-bottom: 20px;
+  line-height: 55px;
+  border-bottom: 1px solid #fff;
+  -webkit-transition: all 2s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  transition: all 2s ease;
+}
+
+.black_bg:hover h1 {
+  border-bottom:1px solid #f8007b;
+}
+.black_bg:hover h3 {
+  /*color: #f8007b;
+  font-weight: bold;
+  -webkit-transition: all 12s ease;
+  -moz-transition: all 2s ease;
+  -ms-transition: all 2s ease;
+  transition: all 2s ease;*/
+}
+
+.black_bg p {
+  font-size: 18px;
+  line-height: 30px;
+  font-style: italic;
+}
+
+.black_bg .content_wrap {
+  width: 500px;
+  margin-left: 30px;
+}
+
+.black_bg .wall_frame {
+    position: absolute;
+    right: 100px;
+    top: 0;
+}
+.black_bg .wall_frame img {
+  width: 92%;
+}
+
+
+#login_popup .popup {
+  border-radius: 0;
+}
+
+#login_popup .form-text {
+  border-radius: 0;
+  width: 100%;
+  border: 0px solid #000;
+  border-bottom: 1px solid #000;
+}
+#branding {
+  display: none !important;
+}
+.plugin #providers .provider .name {
+  margin: 3px 0 3px;
+  width: 308px;
+  padding: 10px 10px;
+  background: #000;
+  color: #fff;
+  font-size: 12px;
+  cursor: pointer;
+  text-transform: uppercase;
+  text-align: center;
+}
+
+.plugin #providers .provider {
+  padding: 0 3px 0 3px;
+}
+
+#go_to_top:hover {
+  color: #fff;
+  background: #f8007b;
+  border: 1px solid #fff;
+}
+
+.view-id-product_block .nav_buttons_wrap {
+  margin-bottom: 10px;
 }
