--- a/flatastic/css/colors/red.css
+++ b/flatastic/css/colors/red.css
@@ -27,7 +27,7 @@ a,a[class*="color"]:not(.color_light):hover,.scheme_color,.close_product:hover,
 .close_fieldset:hover,.text_cs_hover:hover,.tweet_list a:hover,[class*="alert_box"].error i[class^="fa "],
 label[class*="required"]:after,.vertical_list_type_7 li:before,.first_letter_1 > .fl,
 .info_block_type_1:hover [class*="icon_wrap"]{
-	color:#f8007b;
+	color:#000;
 }
 .shopping_cart,[role="banner"],.sub_menu_wrap,.banner_type_2.red,
 .vertical_list_type_3 li:before,.vertical_list_type_7 li:before{
@@ -146,13 +146,13 @@ td.views-field-line-item-title a:hover{
     color: #f8007b;
 }
 span.line-item-total-raw,td.views-field-commerce-order-total,td.component-total,td.views-field-commerce-total{
-    color: #f8007b;
+    color: #000;
 }
 td input.delete-line-item{
     background-color: #f8007b;
 }
 .page-checkout input.checkout-cancel,.page-checkout input.checkout-cancel:focus,.page-checkout-review input.checkout-back,.page-checkout-review input.checkout-back:focus{
-    background-color: #f8007b;
+    background-color: #000;
 }
 .bg-statistic{
     background-color: #f8007b;
@@ -239,8 +239,16 @@ td.component-total{
   background-color: #f8007b;
 }
 .simplenews-subscribe .form-submit, #simplenews-subscriptions-multi-block-form .form-submit {
-  background: #f8007b none repeat scroll 0 0;
+  /*background: #f8007b none repeat scroll 0 0;
+  box-shadow: 0 2px 0 #f8007b;*/
+	background: #000;
   box-shadow: 0 2px 0 #f8007b;
+}
+.simplenews-subscribe .form-submit:hover, #simplenews-subscriptions-multi-block-form .form-submit:hover {
+  /*background: #f8007b none repeat scroll 0 0;
+  box-shadow: 0 2px 0 #f8007b;*/
+	background: #f8007b;
+  box-shadow: 0 2px 0 #dc0570;
 }
 .sub_menu li a.active-trail {
   color: #f8007b;
