--- a/flatastic/css/style.css
+++ b/flatastic/css/style.css
@@ -193,7 +193,7 @@ body{
 .vertical_list_type_8 li:before{
 	-webkit-border-radius:4px;
 	-moz-border-radius:4px;
-	border-radius:4px;
+	border-radius:0px;
 }
 .vc_child:after{
 	content:"";
@@ -505,7 +505,8 @@ label[class*="required"]:after,.vertical_list_type_7 li:before,.first_letter_1 >
 .camera_wrap .camera_prev:hover, .camera_wrap .camera_next:hover,.flex-control-nav .flex-active,
 .flex-direction-nav a:hover,.vertical_list_type_4 li:before,.vertical_list_type_8 li:before,
 .first_letter_2 > .fl,.info_block_type_2:hover [class*="icon_wrap"],#shopping_button:hover > a .count{
-	background:#f8007b;
+	/*background:#f8007b;*/
+	background: #000;
 	color: #fff;
 }
 .select_color.red{
@@ -1113,8 +1114,9 @@ blockquote:after{
 	border-bottom-right-radius:0px;
 }
 .tabs_nav .ui-tabs-active a,.tabs_nav li:hover a[class*="color"]{
-	background:#323a45;
-	color:#f9f9f9;
+	background:#000;
+	color:#fff;
+	font-size: 15px;
 }
 .tabs_content{
 	background:#fff;
@@ -1446,8 +1448,8 @@ blockquote:after{
 .select_title{
 	cursor:pointer;
 	padding:2px 39px 3px 9px;
-	border:2px solid #e4e4e2;
-	background:#f5f7f8;
+	border:1px solid #000;
+	background:#fff;
 	z-index:1;
 	min-width:75px;
 	-webkit-transition:border-color .4s ease;
@@ -1769,13 +1771,13 @@ blockquote:after{
 	color:#fff;*/
 }
 .button_type_8:hover,.button_type_8.bg_scheme_color:hover{
-	background: #e2e6e7;
+	background: none;
 	color: #434649;
 	-webkit-box-shadow:0 2px 0 #bdc3c7;
 	-moz-box-shadow:0 2px 0 #bdc3c7;
 	-o-box-shadow:0 2px 0 #bdc3c7;
 	-ms-box-shadow:0 2px 0 #bdc3c7;
-	box-shadow:0 2px 0 #bdc3c7;
+	box-shadow:0 0px 0 #bdc3c7;
 }
 [class*="button_type_"].bg_color_blue{
 	background:#3498db;
@@ -2668,14 +2670,18 @@ li:hover .tooltip,a:hover .tooltip,button:hover .tooltip{
 	width:375px;
 }
 .product_single_preview{
-	width:458px;
+	width:535px;
 	z-index:0;
+}
+.product_single_preview .qv_preview > img {
+	height: 700px;
+	width: 535px;
 }
 .iframe_video_wrap,.map_container{
 	width:100%;
-	height:0;
+	/*height:0;
 	position: relative;
-	padding-bottom:56%;
+	padding-bottom:56%;*/
 }
 .map_container{padding-bottom:43%;}
 .iframe_video_wrap > iframe,.map_container > iframe{
@@ -3026,11 +3032,11 @@ aside .addthis_widget_container{
 	padding-right:40px;
 }
 input:not([type="submit"]),textarea{
-	background:#f5f7f8;
+	background:#fff;
 	height:40px;
 	padding:9px 10px;
-	color:#696e6e;
-	border:2px solid #e4e4e2;
+	color:#000;
+	border:1px solid #000;
 	outline:none;
 	resize:none;
 }
